--- a/templates/protostar/css/template.css
+++ b/templates/protostar/css/template.css
@@ -189,7 +189,13 @@ textarea {
 }
 body {
 	margin: 0;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Helvetica Neue",
+    Arial,
+    "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans",
+    "BIZ UDPGothic",
+    Meiryo,
+    sans-serif;
 	font-size: 13px;
 	line-height: 18px;
 	color: #333;
